# vastar-sdk-personal

./: .gitignore  connectors.code-workspace
examples-golang/openai-stream-sse-connector/: EXAMPLES.md  README.md  main.go
examples-java/openai-stream-sse-connector/: README.md
examples-python/anthropic-stream-sse-connector/: config.yaml  connector.py  connector.py.save  schema.yaml  test_anthropic_simulator.py
examples-python/gemini-stream-sse-connector/: PYTHON_SDK_USAGE.md  README.md  config.yaml  connector.py  main.py  requirements.txt  test_gemini_simulator.py
examples-python/gemini-streams-sse-connector/: README.md  config.yaml  gemini_adapter.py  main.py  phase1_test_gemini.py  pure_gemini_test.py  rai_simulator.py  requirements.txt  run_connector.sh  run_gemini.sh  run_simulator.sh  test_gemini_simulator.py  test_simple.py
examples-python/gemini-streams-sse-connector/loadtest/: loadtest_pure.py  loadtest_vastar.py
examples-python/openai-stream-sse-connector/: config.yaml  requirements.txt  test_openai_simulator.py  test_simple.py
examples-python/rai_simulator/: rai_simulator.py  run_rai.sh
examples-typescript/gemini-streamsse-connector/src/: index.ts
examples-typescript/openai-stream-sse-connector/: README.md
examples-typescript/openai-stream-sse-connector/src/: index.ts
sdk-golang/: CONNECTOR_DEVELOPER_GUIDE.md  README.md  client.go
sdk-python/: README.md  pyproject.toml  setup.py
sdk-python/vastar_connector_sdk/: __init__.py  exceptions.py  runtime_client.py  types.py  utils.py
sdk-python/vastar_connector_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk-python/vastar_connector_sdk/Vastar/Connector/Ipc/: CreditUpdate.py  ErrorClass.py  ExecuteRequest.py  ExecuteResponse.py  HealthCheckResponse.py  KeyValue.py  MessageType.py
